--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>Feel free to explore the content.</p>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('https://shoalieh.github.io/test/service-worker.js')
+            navigator.serviceWorker.register('service-worker.js')
                 .then((registration) => {
                     console.log('Service Worker registered with scope:', registration.scope);
                 })
