--- a/offline.html
+++ b/offline.html
@@ -19,5 +19,13 @@
 <body>
     <h1>You are currently offline</h1>
     <p>Please check your internet connection and try again.</p>
+
+    <script>
+        navigator.serviceWorker.addEventListener('message', (event) => {
+    if (event.data && event.data.type === 'NAVIGATE_TO_ONLINE') {
+        window.location.href = 'online.html';
+    }
+});
+    </script>
 </body>
 </html>
