--- a/online.html
+++ b/online.html
@@ -19,5 +19,13 @@
 <body>
     <h1>Welcome back! You are now online.</h1>
     <p>Feel free to explore the content.</p>
+
+    <script>
+        navigator.serviceWorker.addEventListener('message', (event) => {
+    if (event.data && event.data.type === 'NAVIGATE_TO_OFFLINE'){
+        window.location.href = 'offline.html';
+    }
+});
+    </script>
 </body>
 </html>
