--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     console.error('Service Worker registration failed:', error);
                 });
         }
-navigator.serviceWorker.addEventListener('message', (event) => {
-    if (event.data && event.data.type === 'NAVIGATE_TO_ONLINE') {
-        window.location.href = 'online.html';
-    }else if (event.data && event.data.type === 'NAVIGATE_TO_OFFLINE'){
-        window.location.href = 'offline.html';
-    }
-});
+// navigator.serviceWorker.addEventListener('message', (event) => {
+//     if (event.data && event.data.type === 'NAVIGATE_TO_ONLINE') {
+//         window.location.href = 'online.html';
+//     }else if (event.data && event.data.type === 'NAVIGATE_TO_OFFLINE'){
+//         window.location.href = 'offline.html';
+//     }
+// });
 
     </script>
 </body>
